--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,6 +10,8 @@ website:
         text: Home
       - href: projects.qmd
         text: Projects
+      - href: courses.qmd
+        text: Courses  
       - href: resume.qmd
         text: Resume  
 
